# bot

src/bot_bringup/: CMakeLists.txt  package.xml
src/bot_bringup/include/bot_bringup/: scout_messenger.hpp
src/bot_bringup/launch/: bot_base.launch  bot_bringup.launch
src/bot_bringup/src/: scout_base_node.cpp
src/bot_description/: package.xml
src/bot_description/launch/: bot_description.launch  view_bot.launch
src/bot_description/meshes/: robosense_rs16.stp
src/bot_description/rviz/: view_bot.rviz
src/bot_description/urdf/: bot.urdf.xacro  wheel.urdf.xacro
src/bot_gps/: CMakeLists.txt  package.xml
src/bot_gps/launch/: bot_gps.launch
src/bot_gps/scripts/: bot_nmea_serial_driver.py  protocol_parse.py  test_protocol.py
src/bot_imu/: CMakeLists.txt  package.xml
src/bot_imu/bash/: configPort.sh  echo_imu_data.sh
src/bot_imu/launch/: echo_imu_data.launch  imu.launch  imu_0x62_msg.launch  imu_0x91_msg.launch  imu_display_3d.launch  imu_msg.launch  view_imu.launch
src/bot_imu/rviz/: view_imu.rviz
src/bot_imu/src/: ch_serial.h  serial_imu.cpp  sub_0x62.cpp  sub_0x91.cpp
src/bot_localizaton/: CMakeLists.txt  package.xml
src/bot_localizaton/config/: odom_filter.yaml
src/bot_localizaton/launch/: odometry_filter.launch
src/bot_msgs/: CMakeLists.txt  package.xml
src/bot_navigation/: CMakeLists.txt  package.xml
src/bot_navigation/launch/: bot_gmapping.launch  bot_hector.launch  bot_navi_rviz.launch  bot_navigation.launch  bot_points2laser.launch
src/bot_navigation/rviz/: bot_navi.rviz  view_map.rviz
src/bot_rslidar/: CMakeLists.txt  package_ros1.xml  package_ros2.xml
src/bot_rslidar/config/: config.yaml
src/bot_rslidar/launch/: start.py  (+3 more)
src/bot_visual/: CMakeLists.txt  package.xml
src/bot_ydlidar/: CMakeLists.txt  package.xml
(+5 files in other folders)
